objects/Demo_Object__c.object
<CustomObject>

    <label>Demo Object</label>
    <nameField>
        <label>Demo Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>